[tool.poetry]
name = "epochcli"
version = "0.1.0"
description = ""
authors = ["ElyasAguiar <elyas.santana98@academico.ifs.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
